ec2_webserver.tf
# Define webserver inside the public subnet
resource "aws_instance" "wb" {
  ami                         = "${var.ami}"
  instance_type               = "t2.micro"
  key_name                    = "${aws_key_pair.default.id}"
  subnet_id                   = "${aws_subnet.public-subnet.id}"
  vpc_security_group_ids      = ["${aws_security_group.sgweb.id}"]
  associate_public_ip_address = true
  source_dest_check           = false
  user_data                   = "${file("install.sh")}"

  tags {
    Name = "webserver"
  }
}

output "Public URL" {
  value = "http://${aws_instance.wb.public_ip}"
}

output "SSH access" {
  value = "ssh -i ${var.key_path} centos@${aws_instance.wb.public_ip}"
}
